syntax = "proto3";

package scale;

option java_package = "com.proto.scale";
option java_multiple_files = true;

message ScaleConvertRequest {
    double weight = 1;
}

message ScaleConvertResponse {
    double weight = 1;
}

service ScaleService {
    rpc ScaleConvert(ScaleConvertRequest) returns (ScaleConvertResponse) {};
}